--- a/landinator/core/templates/index.html
+++ b/landinator/core/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <main class="container">
-        <h1>Aulão do Enem</h1>
+        <h1>{{ title }}</h1>
 
         <section class="content">
             <div class="card">
