--- a/landinator/core/templates/index.html
+++ b/landinator/core/templates/index.html
@@ -1,63 +1,57 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{% extends 'base.html' %}
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}"></link>
+{% block title%}
+    {{ landing_page.title }}
+{% endblock title%}
 
-</head>
-<body>
-    <main class="container">
-        <h1>{{ title }}</h1>
-
-        <section class="content">
-            <div class="card">
-                <div class="card-header">
-                    <h1 class="card-title">Inscreva-se</h1>
-                </div>
-                <div class="card-body">
-                    <form action="." novalidate method="POST">
-                        {% csrf_token %}
-                        <div class="form-row form-control">
-                            {{ form.first_name }}
-                            {{ form.first_name.errors }}
-                        </div>
-                        <div class="form-row form-control">
-                            {{ form.last_name }}
-                            {{ form.last_name.errors }}
-                        </div>
-                        <div class="form-row form-control">
-                            {{ form.email }}
-                            {{ form.email.errors }}
-                        </div>
-                        <div class="form-row form-control">
-                            {{ form.celphone }}
-                            {{ form.celphone.errors }}
-                        </div>
-                        <div class="form-row form-control">
-                            {{ form.phone }}
-                            {{ form.phone.errors }}
-                        </div>
-                        <div class="form-row">
-                            {{ form.accept }}
-                            <span>
-                                Ao se cadastrar neste formulário, você concorda com a nossa 
-                                <a href="https://unisagrado.edu.br/politica-de-privacidade">política de privacidade</a>
-                            </span>
-                            {{ form.accept.errors }}
-                        </div>
-                        <button type="submit">
-                            Enviar
-                        </button>
-                    </form>
-                </div>
+{% block content %}
+<h1>{{ landing_page.title }}</h1>
+<div class="card">
+    <div class="card-header">
+        <h1 class="card-title">Inscreva-se</h1>
+    </div>
+    <div class="card-body">
+        <p>
+            * Campos obrigatórios
+        </p>
+        <form action="{% url 'home' slug=landing_page.slug %}" novalidate method="POST">
+            {% csrf_token %}
+            <div class="form-row form-control">
+                {{ form.first_name }}
+                {{ form.first_name.errors }}
             </div>
-        </section>
-    </main>
-</body>
-</html>
+            <div class="form-row form-control">
+                {{ form.last_name }}
+                {{ form.last_name.errors }}
+            </div>
+            <div class="form-row form-control">
+                {{ form.email }}
+                {{ form.email.errors }}
+            </div>
+            <div class="form-row form-control">
+                {{ form.celphone }}
+                {{ form.celphone.errors }}
+            </div>
+            <div class="form-row form-control">
+                {{ form.phone }}
+                {{ form.phone.errors }}
+            </div>
+            <div class="form-row">
+                {{ form.accept }}
+                <span>
+                    Ao se cadastrar neste formulário, você concorda com a nossa 
+                    <a href="https://unisagrado.edu.br/politica-de-privacidade">política de privacidade</a>
+                </span>
+                {{ form.accept.errors }}
+            </div>
+            <button type="submit" {% if not enabled %}disabled{%endif%}>
+                {% if not enabled %}
+                    Inscrições encerradas
+                {% else %}
+                    Enviar
+                {% endif%}
+            </button>
+        </form>
+    </div>
+</div>
+{% endblock content %}
