feat: disable button after submission

--- a/landinator/core/templates/base.html
+++ b/landinator/core/templates/base.html
@@ -18,5 +18,6 @@
             {%endblock content %}
         </section>
     </main>
+    <script type="text/javascript" src="{% static 'js/app.js' %}"></script>
 </body>
 </html>
