--- a/landinator/core/templates/subscription/success.html
+++ b/landinator/core/templates/subscription/success.html
@@ -11,7 +11,10 @@
         <h1 class="card-title">Sucesso!</h1>
     </div>
     <div class="card-body"> 
-       <h3>Inscrição realizada com sucesso!</h3>
+       <h3>Inscrição realizada com sucesso!</h3><br>
+       <form action="{{ landing.get_absolute_url }}">
+           <button type="submit">voltar</button>
+       </form>
     </div>
 </div>
 {% endblock content %}
